Implement Similar Words

--- a/NLP_HW2_Q1.ipynb
+++ b/NLP_HW2_Q1.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMC/n2x7hcnLMPKXZoHDk0h",
+      "authorship_tag": "ABX9TyOdKH5Utsv9Whv80b085/eL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -543,10 +543,115 @@
     {
       "cell_type": "code",
       "source": [
+        "for test_word in [\"تهران\" ,\"بهداشت\" ,\"دفاع\" ,\"رودخانه\" ,\"سرد\" ,\"فرهنگ\" ,\"استقلال\"]:\n",
+        "  print(f\"Original Word = {test_word}\")\n",
+        "  \n",
+        "  similar_words = word2vec_model.wv.most_similar(test_word, topn=3)\n",
+        "  print(f\"Similar Words =\\n {similar_words}\")\n",
+        "\n",
+        "  print(\"\\n####################\\n\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EwlI9coN7KLl",
+        "outputId": "a7902eb0-77a6-43fd-bc51-6737e1e34dfc"
+      },
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original Word = تهران\n",
+            "Similar Words =\n",
+            " [('تهران،', 0.6653544306755066), ('تبريز', 0.6297075152397156), ('اصفهان', 0.6271501779556274)]\n",
+            "\n",
+            "####################\n",
+            "\n",
+            "Original Word = بهداشت\n",
+            "Similar Words =\n",
+            " [('درمان،', 0.7686203718185425), ('بهداشت،', 0.7683950662612915), ('باروري', 0.7660267353057861)]\n",
+            "\n",
+            "####################\n",
+            "\n",
+            "Original Word = دفاع\n",
+            "Similar Words =\n",
+            " [('مقدس', 0.6609908938407898), ('پشتيباني', 0.6568317413330078), ('مقدس،', 0.6323074102401733)]\n",
+            "\n",
+            "####################\n",
+            "\n",
+            "Original Word = رودخانه\n",
+            "Similar Words =\n",
+            " [('درياچه', 0.8337411284446716), ('رودهاي', 0.8240105509757996), ('كارون', 0.804443359375)]\n",
+            "\n",
+            "####################\n",
+            "\n",
+            "Original Word = سرد\n",
+            "Similar Words =\n",
+            " [('مرطوب', 0.8366057276725769), ('زمستان', 0.8314241766929626), ('معتدل', 0.8152369856834412)]\n",
+            "\n",
+            "####################\n",
+            "\n",
+            "Original Word = فرهنگ\n",
+            "Similar Words =\n",
+            " [('ارشاد', 0.7926586866378784), ('تمدن', 0.7090951800346375), ('سمعي', 0.6957818269729614)]\n",
+            "\n",
+            "####################\n",
+            "\n",
+            "Original Word = استقلال\n",
+            "Similar Words =\n",
+            " [('استقلال،', 0.7326226830482483), ('پاس', 0.6954637765884399), ('پيكان', 0.6863391399383545)]\n",
+            "\n",
+            "####################\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word2vec_model.wv.most_similar(\"تهران\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DyrTWca1uZ3B",
+        "outputId": "377a414c-26e5-4687-aa63-71c86e2cce6c"
+      },
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('تهران،', 0.6653544306755066),\n",
+              " ('تبريز', 0.6297075152397156),\n",
+              " ('اصفهان', 0.6271501779556274),\n",
+              " ('شهرستانها', 0.6102215051651001),\n",
+              " ('پاريس', 0.6093627214431763),\n",
+              " ('رشت', 0.609053909778595),\n",
+              " ('اراك', 0.6028950214385986),\n",
+              " ('بيروت', 0.5990284085273743),\n",
+              " ('شيراز', 0.5881872177124023),\n",
+              " ('بندرانزلي', 0.5873943567276001)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 113
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "DyrTWca1uZ3B"
+        "id": "eSzxZr5P67sE"
       },
       "execution_count": null,
       "outputs": []
