--- a/NLP_HW2_Q2.ipynb
+++ b/NLP_HW2_Q2.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPoAfF1hhhE7eB3/TVz5E+/",
+      "authorship_tag": "ABX9TyNZ1yZjMbQnBOjX5eU+G8bQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 73,
       "metadata": {
         "id": "eHo6mTl5gWxJ"
       },
@@ -48,11 +48,14 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
+        "import math\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
-        "from keras.preprocessing.sequence import pad_sequences"
+        "from keras.preprocessing.sequence import pad_sequences\n",
+        "from keras.layers import Dense, Bidirectional, LSTM, Input\n",
+        "from keras.models import Sequential"
       ]
     },
     {
@@ -275,29 +278,61 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Split Long Data"
+      ],
+      "metadata": {
+        "id": "UWGLaDdXIO-b"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        ""
+        "max_length = 128"
+      ],
+      "metadata": {
+        "id": "QPWEt68kIlV6"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def split_long_data(dataset, max_length):\n",
+        "  new_dataset = []\n",
+        "  for data in dataset:\n",
+        "    number_new_data = math.ceil(len(data)/max_length)\n",
+        "\n",
+        "    for i in range(number_new_data):\n",
+        "      new_dataset.append(data[i*max_length : min((i+1)*max_length, len(data))])\n",
+        "\n",
+        "  return new_dataset"
       ],
       "metadata": {
         "id": "kiPMTCizH96b"
       },
-      "execution_count": null,
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_dataset = split_long_data(train_dataset, max_length)\n",
+        "test_dataset = split_long_data(test_dataset, max_length)\n",
+        "valid_dataset = split_long_data(valid_dataset, max_length)"
+      ],
+      "metadata": {
+        "id": "emB2ZIKlI7ZK"
+      },
+      "execution_count": 58,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# BiLSTM"
-      ],
-      "metadata": {
-        "id": "pFMCXx0Zh0Di"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Tag to Index"
+        "# Tag to Index"
       ],
       "metadata": {
         "id": "sS9pFMXK46Uf"
@@ -334,7 +369,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Word to Vec "
+        "# Word to Vec "
       ],
       "metadata": {
         "id": "5GMrXdTo5tH3"
@@ -363,22 +398,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Digitalize"
+        "# Digitalize & Padding"
       ],
       "metadata": {
         "id": "80cPNO8248a3"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "6zq3HOoJDQu0"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -407,94 +431,59 @@
       "metadata": {
         "id": "q7z9nP9_7jGu"
       },
-      "execution_count": 135,
+      "execution_count": 59,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "train_X, train_y = preprocess(train_dataset, max_length)"
+        "train_X, train_y = preprocess(train_dataset, max_length)\n",
+        "test_X, test_y = preprocess(test_dataset, max_length)\n",
+        "valid_X, valid_y = preprocess(valid_dataset, max_length)"
       ],
       "metadata": {
         "id": "IPQ187Pg8PZ3"
       },
-      "execution_count": null,
+      "execution_count": 68,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "max_length"
+        "# BiLSTM Model"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PLYBKJnm5ONm",
-        "outputId": "bde1333f-a525-4e39-d3cb-25968099d0ad"
-      },
-      "execution_count": 102,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "734"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 102
-        }
-      ]
+        "id": "SlzmI-LYNb15"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "9kmVq5d7Aemd"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pad_sequences(train_dataset, maxlen=max_length, padding='post')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 333
-        },
-        "id": "h4Mg2t3W5V0v",
-        "outputId": "780569b2-e11f-4bb2-f6f6-3d389a342a83"
-      },
-      "execution_count": 134,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-134-591aacdd940a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpad_sequences\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_dataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaxlen\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmax_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpadding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'post'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/keras/preprocessing/sequence.py\u001b[0m in \u001b[0;36mpad_sequences\u001b[0;34m(sequences, maxlen, dtype, padding, truncating, value)\u001b[0m\n\u001b[1;32m    152\u001b[0m   return sequence.pad_sequences(\n\u001b[1;32m    153\u001b[0m       \u001b[0msequences\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaxlen\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmaxlen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 154\u001b[0;31m       padding=padding, truncating=truncating, value=value)\n\u001b[0m\u001b[1;32m    155\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    156\u001b[0m keras_export(\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/keras_preprocessing/sequence.py\u001b[0m in \u001b[0;36mpad_sequences\u001b[0;34m(sequences, maxlen, dtype, padding, truncating, value)\u001b[0m\n\u001b[1;32m     96\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m         \u001b[0;31m# check `trunc` has expected shape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 98\u001b[0;31m         \u001b[0mtrunc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     99\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtrunc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0msample_shape\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m             raise ValueError('Shape of sample %s of sequence at position %s '\n",
-            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '#'"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
+        "class BiLSTM(keras.model):\n",
+        "  def __init__(self, max_length, number_tags):\n",
+        "    super().__init()\n",
+        "    self.model = Sequential([\n",
+        "                             Input(input_shape=(max_length, 50)),\n",
+        "                             Bidirectional(LSTM(256, return_sequence=True)),\n",
+        "                             Dense(number_tags, activation=\"softmax\")\n",
+        "    ])\n",
+        "  \n",
+        "  def call(self, inputs):\n",
+        "    return self.model(inputs)"
       ],
       "metadata": {
         "id": "FbP71C-bAi9B"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "bhqbTl7IQV14"
       },
       "execution_count": null,
       "outputs": []
