First Implementation of BiLSTM

--- a/NLP_HW2_Q2.ipynb
+++ b/NLP_HW2_Q2.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNZ1yZjMbQnBOjX5eU+G8bQ",
+      "authorship_tag": "ABX9TyOYYS/X84M+lOi+2fiiapU0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 1,
       "metadata": {
         "id": "eHo6mTl5gWxJ"
       },
@@ -54,7 +54,7 @@
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
         "from keras.preprocessing.sequence import pad_sequences\n",
-        "from keras.layers import Dense, Bidirectional, LSTM, Input\n",
+        "from keras.layers import Input, Dense, LSTM, Bidirectional, TimeDistributed\n",
         "from keras.models import Sequential"
       ]
     },
@@ -80,9 +80,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m8Dy1Twogfcc",
-        "outputId": "e387dc6d-5e42-4399-d9da-b5fc8f238c1a"
+        "outputId": "ccbdd003-a34b-4fa2-94a2-83b4051b51e8"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,19 +91,19 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1Px1lQhMgkdeFigxwmqvk1ojJPZpq40u5\n",
             "To: /content/UPC_2016_train.txt\n",
-            "100% 25.4M/25.4M [00:00<00:00, 159MB/s] \n",
+            "100% 25.4M/25.4M [00:00<00:00, 184MB/s]\n",
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1WHbpY1Ydqq7yqtQ2YFavR78zsD7nDwbg\n",
             "To: /content/UPC_2016_val.txt\n",
-            "100% 5.47M/5.47M [00:00<00:00, 171MB/s]\n",
+            "100% 5.47M/5.47M [00:00<00:00, 147MB/s]\n",
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1pMJQk75R3898sUzFKUMQTPPE_QlllvAY\n",
             "To: /content/UPC_2016_test.txt\n",
-            "100% 5.48M/5.48M [00:00<00:00, 233MB/s]\n",
+            "100% 5.48M/5.48M [00:00<00:00, 159MB/s]\n",
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1NMesvM67oiJ6-PpSbtErFanj0JMl_Z50\n",
             "To: /content/vectors.zip\n",
-            "100% 48.2M/48.2M [00:00<00:00, 147MB/s]\n"
+            "100% 48.2M/48.2M [00:00<00:00, 201MB/s]\n"
           ]
         }
       ]
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "xMzhvV52pV21"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -146,7 +146,7 @@
       "metadata": {
         "id": "u-yV0N7SqKj6"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -159,9 +159,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LRS_p2k5hROb",
-        "outputId": "636e7a37-11fe-4ef7-87ff-4e67cbdf187f"
+        "outputId": "65f37512-5a0d-4f90-b2a7-5549b378c900"
       },
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,9 +195,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ShMT2eJRD6we",
-        "outputId": "37369563-d06b-4aa6-8ca2-48e1b6ce4e45"
+        "outputId": "e85d7e8a-becf-424a-9479-68a472829e1a"
       },
-      "execution_count": 30,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,7 +218,7 @@
       "metadata": {
         "id": "v4A-5rzx4_Ix"
       },
-      "execution_count": 15,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -236,9 +236,9 @@
           "height": 295
         },
         "id": "7j31OND3CqJE",
-        "outputId": "7231aa9b-c036-4fed-a6a2-59bf9c9eeb56"
+        "outputId": "bd8ad195-e74c-4123-a572-e864c2ef27d4"
       },
-      "execution_count": 26,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -257,22 +257,22 @@
     {
       "cell_type": "code",
       "source": [
-        "print(f\"Percent of Long-tail data = {sum([len(data)>128 for data in train_dataset]) * 100 / len(train_dataset)} %\")"
+        "print(f\"Percent of Long-tail data = {sum([len(data)>100 for data in train_dataset]) * 100 / len(train_dataset)} %\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "EyD0OsPrFOOc",
-        "outputId": "5452a37d-debb-4a39-f471-2721063b95b7"
+        "outputId": "79353d93-251f-4c2a-d127-00d9ec564e3b"
       },
-      "execution_count": 46,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Percent of Long-tail data = 0.37896352675930217 %\n"
+            "Percent of Long-tail data = 0.8618621979884552 %\n"
           ]
         }
       ]
@@ -289,12 +289,12 @@
     {
       "cell_type": "code",
       "source": [
-        "max_length = 128"
+        "max_length = 100"
       ],
       "metadata": {
         "id": "QPWEt68kIlV6"
       },
-      "execution_count": 47,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -313,7 +313,7 @@
       "metadata": {
         "id": "kiPMTCizH96b"
       },
-      "execution_count": 53,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -326,7 +326,7 @@
       "metadata": {
         "id": "emB2ZIKlI7ZK"
       },
-      "execution_count": 58,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -396,6 +396,17 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "embedding_size = len(word2vector['#1'])"
+      ],
+      "metadata": {
+        "id": "x0meOzaSnib4"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Digitalize & Padding"
@@ -407,7 +418,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def preprocess(dataset, max_length):\n",
+        "def preprocess(dataset, max_length, embedding_size):\n",
         "  digitalized_dataset = []\n",
         "  dataset_X = []\n",
         "  dataset_y = []\n",
@@ -417,34 +428,34 @@
         "    dataset_y.append([])\n",
         "\n",
         "    for item in data:\n",
-        "      vector = word2vector.get(item[0], np.zeros(50))\n",
+        "      vector = word2vector.get(item[0], np.zeros(embedding_size))\n",
         "      tag_index = tag2index[item[1]]\n",
         "      dataset_X[-1].append(vector)\n",
         "      dataset_y[-1].append(tag_index)\n",
         "\n",
         "    for _ in range(max_length-len(dataset_y[-1])):\n",
         "      dataset_y[-1].append(0)\n",
-        "      dataset_X[-1].append(np.zeros(50))\n",
+        "      dataset_X[-1].append(np.zeros(embedding_size))\n",
         "\n",
         "  return dataset_X, dataset_y"
       ],
       "metadata": {
         "id": "q7z9nP9_7jGu"
       },
-      "execution_count": 59,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "train_X, train_y = preprocess(train_dataset, max_length)\n",
-        "test_X, test_y = preprocess(test_dataset, max_length)\n",
-        "valid_X, valid_y = preprocess(valid_dataset, max_length)"
+        "train_X, train_y = preprocess(train_dataset, max_length, embedding_size)\n",
+        "test_X, test_y = preprocess(test_dataset, max_length, embedding_size)\n",
+        "valid_X, valid_y = preprocess(valid_dataset, max_length, embedding_size)"
       ],
       "metadata": {
         "id": "IPQ187Pg8PZ3"
       },
-      "execution_count": 68,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -459,13 +470,13 @@
     {
       "cell_type": "code",
       "source": [
-        "class BiLSTM(keras.model):\n",
-        "  def __init__(self, max_length, number_tags):\n",
-        "    super().__init()\n",
+        "class BiLSTM(keras.Model):\n",
+        "  def __init__(self, max_length, embedding_size, number_tags):\n",
+        "    super().__init__()\n",
         "    self.model = Sequential([\n",
-        "                             Input(input_shape=(max_length, 50)),\n",
-        "                             Bidirectional(LSTM(256, return_sequence=True)),\n",
-        "                             Dense(number_tags, activation=\"softmax\")\n",
+        "                             Input((max_length, embedding_size)),\n",
+        "                             Bidirectional(LSTM(256, return_sequences=True)),\n",
+        "                             TimeDistributed(Dense(number_tags+1, activation=\"softmax\"))\n",
         "    ])\n",
         "  \n",
         "  def call(self, inputs):\n",
@@ -474,8 +485,69 @@
       "metadata": {
         "id": "FbP71C-bAi9B"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = BiLSTM(max_length=max_length, embedding_size=embedding_size, number_tags=len(all_tag))"
+      ],
+      "metadata": {
+        "id": "s250KwYGTe-P"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(optimizer=\"adam\", loss=\"sparse_categorical_crossentropy\", metrics=[\"accuracy\"])"
+      ],
+      "metadata": {
+        "id": "bhqbTl7IQV14"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_X_new = np.array(train_X)\n",
+        "valid_X_new = np.array(valid_X)\n",
+        "\n",
+        "train_y_new = np.array(train_y)\n",
+        "valid_y_new = np.array(valid_y)"
+      ],
+      "metadata": {
+        "id": "Waqc51Rktplu"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.fit(x=train_X_new, y=train_y_new, epochs=10, validation_data=(valid_X_new, valid_y_new))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uuY5JOnNSiE4",
+        "outputId": "d5cd855e-8183-4582-bcaf-858d799995fd"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "  72/1976 [>.............................] - ETA: 19:53 - loss: 0.7894 - accuracy: 0.8246"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -483,7 +555,7 @@
         ""
       ],
       "metadata": {
-        "id": "bhqbTl7IQV14"
+        "id": "pLxmpI43vzF9"
       },
       "execution_count": null,
       "outputs": []
